--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-#theme: jekyll-theme-minimal
-#title: Viktors Boroviks' homepage
-#description: Starting as a hello-world project
+theme: jekyll-theme-minimal
+title:
